examples/test/testpolicy11137.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11137
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key10: value16
      key26: value19
      key14: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value20
          key42: value14
      podSelector:
        matchLabels:
          key40: value13
          key27: value7
          key45: value31
